[package]
name = "pg_debug_scan"
version = "0.1.0"
edition = "2021"
authors = ["Jan Nidzwetzki"]
repository = "https://github.com/jnidzwetzki/pg_debug_scan"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
pgrx = "=0.11.3"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "=1.0"

[dev-dependencies]
pgrx-tests = "=0.11.3"


[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
